# mlflow

./: README.md  mlflow_quickstart.ipynb  mlflow_tutorial.ipynb  pyproject.toml
mlruns/0/: meta.yaml
mlruns/336971655772693158/: meta.yaml
mlruns/336971655772693158/11eccf8e6475469e8890390f3427bb29/: meta.yaml
mlruns/336971655772693158/11eccf8e6475469e8890390f3427bb29/metrics/: accuracy
mlruns/336971655772693158/11eccf8e6475469e8890390f3427bb29/tags/: mlflow.log-model.history
mlruns/336971655772693158/6c6916d7b2e04a6a84cc0845f7e8efee/: meta.yaml
mlruns/336971655772693158/6c6916d7b2e04a6a84cc0845f7e8efee/metrics/: accuracy
mlruns/336971655772693158/6c6916d7b2e04a6a84cc0845f7e8efee/tags/: Training info  mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/336971655772693158/beef79df654d479da513d42cdb78c3e2/: meta.yaml
mlruns/336971655772693158/beef79df654d479da513d42cdb78c3e2/metrics/: accuracy
mlruns/336971655772693158/beef79df654d479da513d42cdb78c3e2/tags/: mlflow.log-model.history  mlflow.runName
mlruns/430590294958758981/: meta.yaml
mlruns/430590294958758981/1d9ca1b883334d9f978926ec5a50958a/: meta.yaml
mlruns/430590294958758981/1d9ca1b883334d9f978926ec5a50958a/metrics/: mae  mse  r2  rmse
mlruns/430590294958758981/1d9ca1b883334d9f978926ec5a50958a/tags/: mlflow.log-model.history
mlruns/430590294958758981/tags/: team
mlruns/models/first-test-model/: meta.yaml
mlruns/models/first-test-model/version-1/: meta.yaml
mlruns/models/first-test-model/version-2/: meta.yaml
mlruns/models/first-test-model/version-3/: meta.yaml
(+9 files in other folders)
