[tool.poetry]
name = "mlflow-try"
version = "0.1.0"
description = ""
authors = ["Mateusz Jurewicz <mateusz.jurewicz@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_try"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
mlflow = "^2.9.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
